# roc_estalatree

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
api/v1/: __init__.py
apps/accounts/: admin.py  apps.py  models.py
apps/billing/: admin.py  apps.py  checkout.py  duitku.py  models.py  services.py  subscription_service.py  tasks.py  urls.py  views.py
apps/catalog/: admin.py  apps.py  models.py
apps/console/: apps.py  decorators.py  urls.py  views.py
apps/core/: admin.py  apps.py  audit.py  events.py  formatting.py  models.py  utils.py
apps/crm/: admin.py  apps.py  models.py
apps/dashboard/: apps.py  (+3 more)
config/: asgi.py  celery.py  urls.py  wsgi.py
docs/: 01-overview.md  02-roles.md  03-core-concepts.md  04-products-pricing.md  05-flows.md  06-data-model.md  07-api.md  08-integrations.md  09-features.md  10-non-functional.md  11-tech-stack.md  12-build-plan.md  13-agent-handoff.md  14-state-machines.md  15-provisioning-and-entitlements.md  16-auth-and-sso.md  17-product-packaging.md  18-product-evolution.md  19-extensibility.md  20-ui-information-architecture.md  21-user-journeys.md  22-feature-catalog.md  23-configuration.md  CONVENTIONS.md  DECISIONS.md  GLOSSARY.md  README.md  STATUS.md
templates/: base.html
tests/: conftest.py  factories.py  test_checkout.py  test_console.py  test_dashboard.py  test_licensing.py  test_notifications.py  test_smoke.py  test_storefront.py  test_subscriptions.py  test_topup.py  test_wallet.py
(+145 files in other folders)
