[project]
name = "estalatree"
version = "0.1.0"
description = "Token-based licensing & activation platform with prepaid balance."
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "django>=5.2,<5.3",
    "django-ninja>=1.3,<2",
    # Auth
    "django-allauth[google]>=65,<66",
    "cryptography>=43,<46",
    # Config
    "django-environ>=0.11,<0.12",
    # Database
    "psycopg[binary]>=3.2,<4",
    # Async / jobs
    "celery[redis]>=5.4,<6",
    "django-celery-beat>=2.7,<3",
    "redis>=5,<6",
    # Observability
    "sentry-sdk[django]>=2,<3",
    "structlog>=24,<25",
    # Utilities
    "Pillow>=10,<11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-django>=4.9,<5",
    "factory_boy>=3.3,<4",
    "Faker>=33,<34",
    "black>=24,<25",
    "ruff>=0.8,<1",
    "isort>=5.13,<6",
    "pre-commit>=4,<5",
    "pip-audit>=2.7,<3",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "apps", "api"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["config", "apps", "api"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.uv]
python-preference = "only-managed"
